--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
-<html lang="en">
+<html lang="es">
 <!--<![endif]-->
 
 <head>
@@ -70,7 +70,8 @@
                             <ul class="anchor_nav">
                                 <!-- <li class="current"><a href="#home">Home</a></li> -->
                                 <li><a href="#ventajas">Ventajas</a></li>
-                                <li><a href="#funcionamiento">Funcionamiento</a></li>
+                                <li><a href="#information">Funcionamiento</a></li>
+                                <li><a href="#testimonials">Testimonios</a></li>
                                 <li><a href="#proyectos">Proyectos</a></li>
                                 <!-- <li><a href="#news">Recursos</a></li> -->
                                 <!--                             <li class="button"><a href="#contact">Contact</a></li>
@@ -107,7 +108,8 @@
                         <ul class="anchor_nav">
                             <!-- <li><a href="#home">Home</a></li> -->
                             <li><a href="#ventajas">Ventajas</a></li>
-                            <li><a href="#funcionamiento">Funcionamiento</a></li>
+                            <li><a href="#information">Funcionamiento</a></li>
+                            <li><a href="#testimonials">Testimonios</a></li>
                             <li><a href="#proyectos">Proyectos</a></li>
                             <!-- <li><a href="#news">Recursos</a></li> -->
                             <!-- <li class="button"><a href="#contact">Contact</a></li> -->
@@ -146,7 +148,7 @@
         <!-- /Home -->
         <!-- Services -->
         <section id="ventajas">
-            <div class="edrea_services aos-animate" data-aos="fade-up">
+            <div class="edrea_services">
                 <div class="container">
                     <div class="content">
                         <div class="service_left">
@@ -205,7 +207,7 @@
         <!-- /servicios -->
         <!-- servicios -->
         <section id="information">
-            <div class="edrea_services">
+            <div class="edrea_services aos-init aos-animate" data-aos="slide-right">
                 <div class="container">
                     <div class="content">
                         <div class="info_left">
@@ -436,20 +438,20 @@
                                 <div class="item modal_item" data-index="1">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
-                                        <div class="overlay_image" data-img-url="img/blogs/1.jpg"></div>
+                                        <div class="overlay_image" data-img-url="img/portfolio/sistema-diseno-pm.jpg"></div>
                                     </div>
                                     <div class="overlay"></div>
                                     <div class="title_holder">
                                         <p>
-                                            <span class="date">27 April</span>
-                                            <span class="type">Blog</span>
+                                            <span class="date">Jun 22</span>
+                                            <span class="type">Diseño UI</span>
                                         </p>
                                         <h3>World’s most famous developers and designers</h3>
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
                                             <img src="img/thumb4-3.jpg" alt="" />
-                                            <div class="main" data-img-url="img/blogs/1.jpg"></div>
+                                            <div class="main" data-img-url="img/portfolio/sistema-diseno-pm.jpg"></div>
                                         </div>
                                         <div class="description">
                                             <h3>World’s most famous developers and designers</h3>
