--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="UX Lab / Macropay">
     <meta name="author" content="marketify">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <title>UX Lab / Macropay</title>
     <!-- STYLES -->
@@ -74,8 +74,7 @@
                                 <li><a href="#testimonials">Testimonios</a></li>
                                 <li><a href="#proyectos">Proyectos</a></li>
                                 <!-- <li><a href="#news">Recursos</a></li> -->
-                                <!--                             <li class="button"><a href="#contact">Contact</a></li>
- -->
+                                <!-- <li class="button"><a href="#contact">Contact</a></li>-->
                             </ul>
                             <span class="ccc"></span>
                         </div>
@@ -130,16 +129,9 @@
                 <div class="content">
                     <div class="container">
                         <div class="content_in">
-                            <h3 class="title title-dekstop">UX <span>Lab</span></h3>
+                            <h3 class="title title-dekstop">UX <span>Lab</span> </h3>
+                            <div style="text-align: left;"><small>by MKT</small></div>
                             <h5 class="copy-hero">Evaluar los procesos de usabilidad, interacción y emociones del usuario.</h5>
-                            <!-- <div class="edrea_video_button">
-                                <a class="popup-youtube" href="https://www.youtube.com/watch?v=7e90gBu4pas"></a>
-                                <span class="icon"><img class="svg" src="img/svg/play.svg" alt="svg" /></span>
-                                <div class="video_right">
-                                    <span class="top">How we work</span>
-                                    <span class="bottom">Promotion video</span>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -154,12 +146,8 @@
                         <div class="service_left">
                             <div class="edrea_title bg_white">
                                 <h3 class="title">Al crear <br> <span>Productos Digitales</span></h3>
-                                <p class="description">con informes cualitativos y cuantitativos <br>en la estrategia de negocio.</p>
+                                <p class="description">Con informes cualitativos y cuantitativos <br>en la estrategia de negocio.</p>
                             </div>
-                            <!--  <div class="edrea_title m-5">
-                                <h3 class="title">Impacto <span>del UX</span></h3>
-                                <p class="description"> en la estrategia de negocio.</p>
-                            </div> -->
                             <div class="edrea_checklist">
                                 <ul>
                                     <li>
@@ -174,13 +162,15 @@
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
                                         <h3>Promueve la transformación</h3>
                                     </li>
+                                    <li>
+                                        <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
+                                        <h3>Los proyectos se hacen en Casa</h3>
+                                    </li>
                                 </ul>
-
                             </div>
                         </div>
                         <div class="service_right">
                             <div class="edrea_title">
-                                <!-- <p class="sub_text"><span>experts growts</span></p> -->
                                 <h3 class="title">Tipos de proyecto <br>del <span>UX Lab</span></h3>
                             </div>
                             <div class="edrea_checklist">
@@ -199,6 +189,8 @@
                                     </li>
                                 </ul>
                             </div>
+                            <div class="edrea_title">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -207,7 +199,7 @@
         <!-- /servicios -->
         <!-- servicios -->
         <section id="information">
-            <div class="edrea_services aos-init aos-animate" data-aos="slide-right">
+            <div class="edrea_services animated infinite">
                 <div class="container">
                     <div class="content">
                         <div class="info_left">
@@ -306,7 +298,6 @@
                                 <!-- <p class="description">An engaged employee that is aligned with the company's mission
                                     and values will be more productive and stay at the company longer</p> -->
                             </div>
-
                             <div class="edrea_checklist">
                                 <ul>
                                     <li>
@@ -351,6 +342,18 @@
             </div>
         </section>
         <!-- /Information -->
+        <!-- xc -->
+        <section id="xc-clientes">
+            <div class="grid-container">
+                <div class="item-left">
+                    <h2 class="title">XC Data de experiencia al cliente</h2>
+                    <img src="img/datavoz-cliente.jpg" alt="Data de voz al cliente">
+                </div>
+                <div class="item-right">
+                </div>
+            </div>
+        </section>
+        <!-- xc -->
         <!-- Testimonials -->
         <section id="testimonials">
             <div class="edrea_testimonials">
@@ -421,7 +424,7 @@
             </div>
         </section>
         <!-- /Testimonials -->
-        <!-- News -->
+        <!-- proyctos -->
         <section id="proyectos">
             <div class="edrea_news">
                 <div class="container">
@@ -494,7 +497,7 @@
                                 <div class="item modal_item" data-index="2">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
-                                        <div class="overlay_image" data-img-url="img/blogs/2.jpg"></div>
+                                        <div class="overlay_image" data-img-url="img/portfolio/portafolio-macrop.jpg"></div>
                                     </div>
                                     <div class="overlay"></div>
                                     <div class="title_holder">
@@ -669,11 +672,11 @@
                 </div>
             </div>
         </section>
-        <!-- /News -->
+        <!-- /proyectos -->
         <footer class="edrea_footer">
             <div class="container">
                 <div class="content">
-                    <p>Julio C. Poxtan D. / Diseñador UX UI</p>
+                    <p>Hecho con 💙 MKT / Macropay / Julio C. Poxtan D. - Diseñador UX UI</p>
                 </div>
             </div>
         </footer>
