--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h3>Los proyectos se hacen en Casa</h3>
+                                        <h3>Los productos digitales se hacen en Casa</h3>
                                     </li>
                                 </ul>
                             </div>
@@ -676,7 +676,7 @@
         <footer class="edrea_footer">
             <div class="container">
                 <div class="content">
-                    <p>Hecho con 💙 MKT / Macropay / Julio C. Poxtan D. - Diseñador UX UI</p>
+                    <p>Hecho con 💙 por MKT / Macropay / Julio C. Poxtan D. - Diseñador UX UI</p>
                 </div>
             </div>
         </footer>
