--- a/index.html
+++ b/index.html
@@ -303,36 +303,30 @@
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
                                         <h3>Research</h3>
-                                        <p>* Investigación </p>
-                                        <p>* Objetivos de Negocio</p>
-                                        <p>* Expectativas de Stakeholders</p>
+                                        <p>Expectativas de Stakeholders</p>
+                                        <p>Investigación </p>
+                                        <p>Objetivos de Negocio</p>
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
                                         <h3>Prototipo de producto</h3>
-                                        <p>* Validación </p>
-                                        <p>* Ajustes</p>
+                                        <p>Pruebas con usuarios reales </p>
+                                        <p>Validación </p>
+                                        <p>Ajustes</p>
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
                                         <h3>Diseño Visual</h3>
-                                        <p>* Diseño de línea visual UI. </p>
-                                        <p>* Presentación.</p>
-                                        <p>* Validación.</p>
-                                    </li>
-                                    <li>
-                                        <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
-                                        <h3>Layout</h3>
-                                        <p>* Lipo de columnas y espaciados. </p>
-                                        <p>* Sistema de Diseño.</p>
-                                        <p>* Guía de implementación para producción.</p>
+                                        <p>Diseño de línea visual UI. </p>
+                                        <p>Presentación.</p>
+                                        <p>Validación.</p>
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/check-circle.svg" alt="svg" /></span>
                                         <h3>Datos</h3>
-                                        <p>* Análisis de cada proyecto o producto.</p>
-                                        <p>* Definición de procedimientos.</p>
-                                        <p>* Informes de interacciones y resultados de productos digitales.</p>
+                                        <p>Análisis de cada proyecto o producto.</p>
+                                        <p>Definición de procedimientos.</p>
+                                        <p>Informes de interacciones y resultados de productos digitales.</p>
                                     </li>
                                 </ul>
                             </div>
@@ -363,12 +357,25 @@
                             <div class="edrea_title">
                                 <!-- <p class="sub_text"><span>Testimonios</span></p> -->
                                 <h3 class="title">Testimonios</h3>
-                                <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renovar sus productos?</p>
+                                <p class="description">¿Qué dicen los colaboradores Macropay con esta forma crear, actualizar o renovar productos digitales?</p>
                             </div>
                         </div>
                         <div class="testi_right">
                             <div class="edrea_testi_slider">
                                 <div class="owl-carousel">
+                                    <div class="item">
+                                        <div class="item_in">
+                                            <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
+                                            <div class="description">
+                                                <p>Se tiene una claridad y alcance del proyecto desde el diseño ayuda mucho a medir tiempos y apoyar al cliente (PO) a aterrizar la idea o solución.</p>
+                                            </div>
+                                            <div class="title">
+                                                <span class="image" data-img-url="img/testimonial/2.jpg"></span>
+                                                <h3>Luis Vargas</h3>
+                                                <p>Lider de proyectos TD</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="item">
                                         <div class="item_in">
                                             <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
@@ -409,6 +416,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                 </div>
                                 <div class="quote">
                                     <img class="svg" src="img/svg/quote.svg" alt="svg" />
@@ -430,8 +438,7 @@
                 <div class="container">
                     <div class="content">
                         <div class="edrea_title bg_white">
-                            <!--                             <p class="sub_text"><span>Proyectos</span></p>
- -->
+                            <!--<p class="sub_text"><span>Proyectos</span></p>-->
                             <h3 class="title">Proyectos realizados <br> <span>desde casa</span></h3>
                             <!-- <p class="description">Browse the latest digital marketing agency news including awards, new
                                 projects and clients, recruitment and partnership announcements.</p> -->
@@ -449,7 +456,7 @@
                                             <span class="date">Jun 22</span>
                                             <span class="type">Diseño UI</span>
                                         </p>
-                                        <h3>World’s most famous developers and designers</h3>
+                                        <h3>Sistema de Diseño</h3>
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
@@ -676,7 +683,7 @@
         <footer class="edrea_footer">
             <div class="container">
                 <div class="content">
-                    <p>Hecho con 💙 por MKT / Macropay / Julio C. Poxtan D. - Diseñador UX UI</p>
+                    <p>Hecho con 💙 por MKT / Julio C. Poxtan D. - Diseñador UX UI</p>
                 </div>
             </div>
         </footer>
