--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                     </li>
                                     <li>
                                         <span class="icon"><img class="svg" src="img/svg/icons8-checkmark.svg" alt="svg" /></span>
-                                        <h3>Los productos digitales se hacen en Casa</h3>
+                                        <h3>Datos y evaluación de usurios</h3>
                                     </li>
                                 </ul>
                             </div>
@@ -172,6 +172,7 @@
                         <div class="service_right">
                             <div class="edrea_title">
                                 <h3 class="title">Tipos de proyecto <br>del <span>UX Lab</span></h3>
+                                <p class="description">Todo producto digital puede ser una App, Sitio web o plataformas internas.</p>
                             </div>
                             <div class="edrea_checklist">
                                 <ul>
@@ -343,8 +344,6 @@
                     <h2 class="title">XC Data de experiencia al cliente</h2>
                     <img src="img/datavoz-cliente.jpg" alt="Data de voz al cliente">
                 </div>
-                <div class="item-right">
-                </div>
             </div>
         </section>
         <!-- xc -->
@@ -416,7 +415,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                 </div>
                                 <div class="quote">
                                     <img class="svg" src="img/svg/quote.svg" alt="svg" />
@@ -440,8 +438,7 @@
                         <div class="edrea_title bg_white">
                             <!--<p class="sub_text"><span>Proyectos</span></p>-->
                             <h3 class="title">Proyectos realizados <br> <span>desde casa</span></h3>
-                            <!-- <p class="description">Browse the latest digital marketing agency news including awards, new
-                                projects and clients, recruitment and partnership announcements.</p> -->
+                           
                         </div>
                         <div class="edrea_news_slider">
                             <div class="owl-carousel modal_items" data-from="news" data-count="4">
@@ -456,7 +453,7 @@
                                             <span class="date">Jun 22</span>
                                             <span class="type">Diseño UI</span>
                                         </p>
-                                        <h3>Sistema de Diseño</h3>
+                                        <h3>Sistema de Diseño / Paguitos Móvil</h3>
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
@@ -509,10 +506,10 @@
                                     <div class="overlay"></div>
                                     <div class="title_holder">
                                         <p>
-                                            <span class="date">18 April</span>
-                                            <span class="type">Blog</span>
+                                            <span class="date">Abril 22</span>
+                                            <span class="type">Diseño UI</span>
                                         </p>
-                                        <h3>Learn About Wireframes Before Hiring a Web Developer</h3>
+                                        <h3>E-commerce / Macropay</h3>
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
@@ -565,7 +562,7 @@
                                     <div class="overlay"></div>
                                     <div class="title_holder">
                                         <p>
-                                            <span class="date">14 April</span>
+                                            <span class="date">Ene - Sep 22</span>
                                             <span class="type">Blog</span>
                                         </p>
                                         <h3>7 Ways to Optimize Your WordPress Website</h3>
