--- a/index.html
+++ b/index.html
@@ -343,6 +343,24 @@
                 <div class="item-left">
                     <h2 class="title">XC Data de experiencia al cliente</h2>
                     <img src="img/datavoz-cliente.jpg" alt="Data de voz al cliente">
+                    <small>Data de Voz al cliente</small>
+                </div>
+                <div class="item-right">
+                    <span>Opiniones actualmente de la App Macropay</span>
+                    <ul class="list-grid-info">
+                        <li class="list-info">
+                            <h4>Restricciones del equipo</h4>
+                            <p>1.4% mencionan que la app no les permite instalar aplicaciones necesarias para sus actividades (App's fuera de la store oficial)</p>
+                        </li>
+                        <li class="list-info">
+                            <h4>Funcionamiento de opciones de pago</h4>
+                            <p>0.5% comentan que no les permite pagos directos con tarjetas desde la apliación.</p>
+                        </li>
+                        <li class="list-info">
+                            <h4>Mal funcionamiento del equipo</h4>
+                            <p>0.3% mencionan que la app repercute en el funcionamiento de los celulares.</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -379,8 +397,7 @@
                                         <div class="item_in">
                                             <!-- <span class="icon"><img class="svg" src="img/svg/quote.svg" alt="svg" /></span> -->
                                             <div class="description">
-                                                <p>It's always a pleasure to work with Edrea and thesz team. They are
-                                                    personable, responsive, and results-oriented!</p>
+                                                <p>Me parece muy dinamica y ordenada. </p>
                                             </div>
                                             <div class="title">
                                                 <span class="image" data-img-url="img/testimonial/1.jpg"></span>
@@ -441,7 +458,7 @@
                            
                         </div>
                         <div class="edrea_news_slider">
-                            <div class="owl-carousel modal_items" data-from="news" data-count="4">
+                            <div class="owl-carousel modal_items" data-from="news" data-count="5">
                                 <div class="item modal_item" data-index="1">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
@@ -557,15 +574,15 @@
                                 <div class="item modal_item" data-index="3">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
-                                        <div class="overlay_image" data-img-url="img/blogs/3.jpg"></div>
+                                        <div class="overlay_image" data-img-url="img/portfolio/add-app.png"></div>
                                     </div>
                                     <div class="overlay"></div>
                                     <div class="title_holder">
                                         <p>
-                                            <span class="date">Ene - Sep 22</span>
-                                            <span class="type">Blog</span>
+                                            <span class="date">Mayo 22</span>
+                                            <span class="type">Diseño y prototipo</span>
                                         </p>
-                                        <h3>7 Ways to Optimize Your WordPress Website</h3>
+                                        <h3>ADN App / Macropay</h3>
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
@@ -613,15 +630,15 @@
                                 <div class="item modal_item" data-index="4">
                                     <div class="image">
                                         <img src="img/thumb63-43.jpg" alt="" />
-                                        <div class="overlay_image" data-img-url="img/blogs/4.jpg"></div>
+                                        <div class="overlay_image" data-img-url="img/portfolio/Macropay-app.png"></div>
                                     </div>
                                     <div class="overlay"></div>
                                     <div class="title_holder">
                                         <p>
-                                            <span class="date">03 April</span>
-                                            <span class="type">Blog</span>
+                                            <span class="date">Ene - Sep 22</span>
+                                            <span class="type">Diseño UI</span>
                                         </p>
-                                        <h3>Don't Build Your App for 100 Million Users</h3>
+                                        <h3>Actualizaciones de Aplicación / Macropay</h3>
                                     </div>
                                     <div class="hidden_information">
                                         <div class="image">
@@ -658,6 +675,54 @@
                                                     </li>
                                                 </ul>
                                             </div>
+                                            <p>Streets empty that are usually busy are remarkable and can evoke the
+                                                sense of historical pictures from before the invention of the motorcar.
+                                                Other things that are different at the moment will be queues to get into
+                                                stores and the lines marked out on the floor to show how far apart we
+                                                should be.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item modal_item" data-index="5">
+                                    <div class="image">
+                                        <img src="img/thumb63-43.jpg" alt="" />
+                                        <div class="overlay_image" data-img-url="img/portfolio/paguitos-app-comisiones.png"></div>
+                                    </div>
+                                    <div class="overlay"></div>
+                                    <div class="title_holder">
+                                        <p>
+                                            <span class="date">Mayo 22</span>
+                                            <span class="type">App</span>
+                                        </p>
+                                        <h3>Paguitos Móvil / Pago de comisiones</h3>
+                                    </div>
+                                    <div class="hidden_information">
+                                        <div class="image">
+                                            <img src="img/portfolio/paguitos-app-comisiones.png" alt="" />
+                                            <div class="main" data-img-url="img/portfolio/paguitos-app-comisiones.png"></div>
+                                        </div>
+                                        <div class="description">
+                                            <h3>Objetivo general</h3>
+                                            <p>Crear una app para que el vendedor del socio registre todas ventas realizadas en la consola de paguitos móvil, para un control del pago de comisiones generadas de manera semanal.</p>
+                                            
+                                            <h3>Alcance general</h3>
+                                            <p>Tener una app personalizada para tener un registro de ventas realizadas por integrantes para recibir su comisión por cada venta registrada.</p>
+                                            <!-- <div class="in_list">
+                                                <ul>
+                                                    <li>
+                                                        <p>Email is a crucial channel in any marketing.</p>
+                                                    </li>
+                                                    <li>
+                                                        <p>Curious what to say? How to say it?</p>
+                                                    </li>
+                                                    <li>
+                                                        <p>Whether you’re kicking off a new ca mpaign.</p>
+                                                    </li>
+                                                    <li>
+                                                        <p>Habitasse per feugiat aliquam luctus accumsan curae</p>
+                                                    </li>
+                                                </ul>
+                                            </div> -->
                                             <p>Streets empty that are usually busy are remarkable and can evoke the
                                                 sense of historical pictures from before the invention of the motorcar.
                                                 Other things that are different at the moment will be queues to get into
